--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:webhook": "jest tests/sms-webhook.test.js",
     "test:api": "jest tests/api-responses.test.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "twilio",
     "sms",
